# pulsaar

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
core/: Cargo.toml
core/src/: error.rs  ffi.rs  lib.rs  transport.rs
core/src/devices/: mod.rs  types.rs
core/src/direct/: mod.rs
core/src/hidpp/: hidpp10.rs  hidpp20.rs  message.rs  mod.rs
core/src/receiver/: mod.rs
lib/logitech_receiver/: device.py  settings_validator.py
macos/Pulsaar/: ContentView.swift  PairingSheet.swift  PulsaarApp.swift  PulsaarCore-Bridging-Header.h
macos/Pulsaar.xcodeproj/: project.pbxproj
macos/Pulsaar/Assets.xcassets/bolt.imageset/: Contents.json
macos/Pulsaar/Core/: DeviceCache.swift  Models.swift  ReceiverStore.swift
macos/Pulsaar/Pulsaar/: ContentView.swift  PulsaarCore-Bridging-Header.h
macos/Pulsaar/Pulsaar.icon/: icon.json
macos/Pulsaar/Pulsaar.xcodeproj/: project.pbxproj
windows/: Pulsaar.sln
windows/Pulsaar/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Pulsaar.csproj  SidebarItems.cs  app.manifest
windows/Pulsaar/Controls/: DeviceHeader.xaml  DeviceHeader.xaml.cs  DeviceSettingsPanel.xaml  DeviceSettingsPanel.xaml.cs  LogDpiSlider.xaml  LogDpiSlider.xaml.cs  SidebarTemplateSelector.cs
windows/Pulsaar/Core/: DeviceCache.cs  Models.cs  NativeInterop.cs  ReceiverStore.cs
windows/Pulsaar/Views/: BluetoothDetailPage.xaml  BluetoothDetailPage.xaml.cs  DeviceDetailPage.xaml  DeviceDetailPage.xaml.cs  ReceiverDetailPage.xaml  ReceiverDetailPage.xaml.cs
(+6 files in other folders)
