[package]
name = "pulsaar-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulsaar_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
hidapi = "2"
thiserror = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
] }
